@@ -23,35 +23,117 @@
 
 <script>
 
-    jQuery(".menu-responsive.dashicons.dashicons-menu").on("click", function(event) {
-        event.preventDefault();
-        event.stopPropagation();
+    var Module = (function() {
 
-        var $menuHeader = jQuery("#menu-panel").find(".menu-header"),
-            $list = $menuHeader.find("ul.menu-principal"),
-            $imgCentre = jQuery(".box-titlemobile-logo").find("img");
+        var isMobileDevice = function () {
+            return jQuery("html").hasClass("touch") ? true : false;
+        };
 
-        var toggleClass = $menuHeader.hasClass("open-menu-header") ? "removeClass" : "addClass";
+        var MenuResponsive = {
+            is_mobile: false,
+            menu: null,
+            menu_header: null,
+            list: {},
+            list_items: {},
+            list_items_anchor: {},
+            img_header: null,
+            html: null,
+            init: function() {
 
-        $menuHeader[toggleClass]("open-menu-header");
-        $list[toggleClass]("open-menu-principal");
-        $imgCentre[toggleClass]("invisible");
-    });
+                MenuResponsive.is_mobile = isMobileDevice(),
+                    MenuResponsive.menu = jQuery(".menu-responsive.dashicons.dashicons-menu"),
+                    MenuResponsive.menu_header = jQuery("#menu-panel").find(".menu-header"),
+                    MenuResponsive.list = MenuResponsive.menu_header.find("ul.menu-principal"),
+                    MenuResponsive.list_items = MenuResponsive.list.find("li.menu-item-depth-0"),
+                    MenuResponsive.list_items_anchor = MenuResponsive.list.find("li.menu-item-depth-0 a"),
+                    MenuResponsive.img_header = jQuery(".box-titlemobile-logo").find("img"),
+                    MenuResponsive.html = jQuery('html');
 
-function cerca_toggle(){
-    $icon_search  = document.getElementById("icon-search");
-    $search_panel = document.getElementById("search-panel");
+                MenuResponsive.checkClassToNavigateListItemsAnchor();
+                MenuResponsive.addEventListeners();
+            },
+            checkClassToNavigateListItemsAnchor: function() {
+                MenuResponsive.list_items_anchor.each(function(index, value){
+                    var self = jQuery(this),
+                        href = self.attr('href');
 
-    if ($search_panel.style.display=="inline-block") {
-      $search_panel.style.display="none";
-      $icon_search.setAttribute("class", "dashicons dashicons-search");
-    } else {
-      $search_panel.style.display="inline-block";
-      $icon_search.setAttribute("class", "dashicons dashicons-no-alt");
-      document.getElementById("icon-13").setAttribute("backgroundColor", "yellow");
-    }
-}
+                    if (href.indexOf("http") == -1) {
+                        self.addClass("no-anchor");
+                    }
+                });
+            },
+            addEventListeners: function() {
+                MenuResponsive.menu.on("click", MenuResponsive.handleVisibility);
+                MenuResponsive.list_items.on("click", MenuResponsive.handleVisibilityMenuItems);
+                MenuResponsive.list_items_anchor.on("click", MenuResponsive.handleMenuItemsAnchor);
+            },
+            handleVisibility: function(event) {
+                event.preventDefault();
+                event.stopPropagation();
 
+                var toggleClass = MenuResponsive.menu_header.hasClass("open-menu-header") ? "removeClass" : "addClass";
+
+                MenuResponsive.menu_header[toggleClass]("open-menu-header");
+                MenuResponsive.list[toggleClass]("open-menu-principal");
+                MenuResponsive.img_header[toggleClass]("invisible");
+                MenuResponsive.html[toggleClass]("fixed");
+            },
+            handleVisibilityMenuItems: function(event) {
+                event.preventDefault();
+                event.stopPropagation();
+
+                MenuResponsive.list_items.removeClass("list-opened"); // clear all arrow up icons
+
+                var self = jQuery(this),
+                    $ul = self.find("> ul"),
+                    toggleVisibility = $ul.hasClass("visible") ? "removeClass" : "addClass";
+
+                $ul[toggleVisibility]("visible");
+                self[toggleVisibility]("list-opened");
+            },
+            handleMenuItemsAnchor: function(event) {
+                event.preventDefault();
+                event.stopPropagation();
+
+                var self = jQuery(this),
+                    href = self.attr("href");
+
+                if(href) {
+                    window.location.href = href;
+                }
+
+                return false;
+            }
+        };
+
+        var SearchResponsive = {
+            div_form : null,
+            search_icon : null,
+
+            init: function() {
+                SearchResponsive.div_form = jQuery(".responsive-search-form ");
+                SearchResponsive.search_icon = jQuery(".dashicons.dashicons-search ");
+                SearchResponsive.addEventListeners();
+            },
+            addEventListeners: function() {
+                SearchResponsive.search_icon.on("click",SearchResponsive.handleSearchBtn)
+            },
+            handleSearchBtn: function () {
+                var  toggleVisibility = SearchResponsive.div_form.hasClass("focused") ? "removeClass" : "addClass";
+                SearchResponsive.div_form[toggleVisibility]("focused");
+            }
+        };
+
+        return {
+            MenuResponsiveInit :  MenuResponsive.init,
+            SearchResponsiveInit :  SearchResponsive.init,
+            isMobileDevice :  isMobileDevice
+        };
+
+    })();
+
+    Module.MenuResponsiveInit();
+    Module.SearchResponsiveInit();
 </script>
 
  
